[tool.poetry]
name = "migri_queue_checker"
version = "0.1.0"
description = ""
authors = ["Adarsh Krishnan <adarshk7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
types-requests = "^2.27.31"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
